@@ -1,3 +1,10 @@
+2019-03-11  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/89629
+	* libsupc++/hash_bytes.cc [__SIZEOF_SIZE_T__ == 8] (_Hash_bytes):
+	Use correct type for len_aligned.
+	* testsuite/20_util/hash/89629.cc: New test.
+
 2019-03-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR libstdc++/89641
